Re-build Textural Messages test using D3
Still need to find a way to scroll the messages when they reach
the bottom edge of the screen.

Try:
- translating the elements within the svg.main or
- translating svg.main (which may keep all elements visible for export later)

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
 body {
-    width: 100%;
-}
+    width: 100%; }
+
 svg.main {
-    margin: 0 auto; /*border: 1px solid red;*/
+    margin: 0 auto; }
+    
+svg.main.debug {
+    border: 1px solid red;
 }
