--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
-
+    // background: #eee;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -100,12 +100,8 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
+    // background: #eee;
     padding: $spacing-unit 0;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
 }
 
 .footer-heading {
