Add basic <noscript> warning in footer
Issue #4

Include helpful links in message, such as general information on enabling
scripts, as well as a link to finished score PDFs, when ready.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -104,6 +104,12 @@
     padding: $spacing-unit 0;
 }
 
+div.noscript {
+    width: 100%;
+    color: #ff0000;
+    background: #ffeeee;
+}
+
 .footer-heading {
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
