--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
 
   <div class="wrapper">
 
-
+    <noscript>
+        <div class="noscript"><u>/!\</u> vectorscor.es requires JavaScript</div>
+        {% comment %}Include helpful links here, including finished PDFs, when ready{% endcomment %}
+    </noscript>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
