Allow offline work, using optional local d3.js file
Issue #5

If jekyll.environment == "offline", use /js/d3.v3.min.js
as opposed to the CDN script.

Set using:

$ JEKYLL_ENV=offline jekyll serve

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <noscript>
         <div class="noscript"><u>/!\</u> vectorscor.es requires JavaScript</div>
-        {% comment %}Include helpful links here, including finished PDFs, when ready{% endcomment %}
+        {% comment %}<!--Include helpful links here, including finished PDFs, when ready-->{% endcomment %}
     </noscript>
 
     <div class="footer-col-wrapper">
