--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="{{ "/css/score.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
