--- a/css/score.scss
+++ b/css/score.scss
@@ -1,8 +1,14 @@
+---
+# score-specific styles
+---
 body {
     width: 100%; }
 
 svg.main {
     margin: 0 auto;
+    -webkit-user-select: none; /* Chrome, Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE 10+ */
     &.debug {
         border: 1px solid red;
     }
