Add simple score instructions
Until tutorial/performance notes function can be built out,
display static text below <svg>

--- a/css/score.scss
+++ b/css/score.scss
@@ -2,7 +2,9 @@
 # score-specific styles
 ---
 body {
-    width: 100%; }
+    width: 100%;
+    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
 
 svg.main {
     margin: 0 auto;
