--- a/css/score.scss
+++ b/css/score.scss
@@ -11,6 +11,7 @@ body {
 svg.main {
     display: block;
     margin: 0 auto;
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* prevent iOS flash on tap */
     -webkit-user-select: none; /* Chrome, Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE 10+ */
