--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -9,10 +9,22 @@ layout: compress
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <svg class="main"></svg>
-    {% include script-d3.html %}
-    <script src="script.js" charset="utf-8"></script>
-    {% comment %}<!--Add footer, including score/performance controls-->{% endcomment %}
-    {{ content }}
+    <main>
+        <svg class="main"></svg>
+        {% include script-d3.html %}
+        <script src="script.js" charset="utf-8"></script>
+        {{ content }}
+    </main>
+    <footer>
+        {% comment %}<!--
+        play
+        pause
+        previous
+        next
+        PC options (PCs/note names/transpose)
+        tutorial
+        save/print
+        -->{% endcomment %}
+    </footer>
 </body>
 </html>
