--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -12,6 +12,7 @@ layout: compress
     <main>
         <svg class="main"></svg>
         {% include script-d3.html %}
+        {% include script-vs.html %}
         <script src="script.js" charset="utf-8"></script>
         {{ content }}
     </main>
