--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,6 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
     // background: #eee;
@@ -13,7 +12,7 @@
 .site-title {
     font-size: 26px;
     // font-weight: 300;
-    font-style: italic;
+    font-family: $head-font-family;
     line-height: 56px;
     // letter-spacing: -1px;
     margin-bottom: 0;
@@ -111,8 +110,8 @@ div.noscript {
 }
 
 .footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    font-size: 15px;
+    margin-bottom: 0;//$spacing-unit / 2;
 }
 
 .contact-list,
