--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,9 @@
 
 
 // Our variables
-$base-font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: "Inconsolata", "Courier New", Courier, monospace;
+$head-font-family: $base-font-family; // "Merriweather";
+$base-font-size:   15px; //16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
