--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -5,16 +5,17 @@ layout: compress
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ "/css/score.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
         <svg class="main"></svg>
+        {{ content }}
         {% include script-d3.html %}
         {% include script-vs.html %}
         <script src="script.js" charset="utf-8"></script>
-        {{ content }}
     </main>
     <footer>
         {% comment %}<!--
