--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -13,20 +13,12 @@ layout: compress
     <main>
         <svg class="main"></svg>
         {{ content }}
-        {% include script-d3.html %}
-        {% include script-vs.html %}
-        <script src="script.js" charset="utf-8"></script>
     </main>
     <footer>
-        {% comment %}<!--
-        play
-        pause
-        previous
-        next
-        PC options (PCs/note names/transpose)
-        tutorial
-        save/print
-        -->{% endcomment %}
+        {% include score-footer.html %}
     </footer>
+    {% include script-d3.html %}
+    {% include script-vs.html %}
+    <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
