--- a/_includes/script-d3.html
+++ b/_includes/script-d3.html
@@ -1,4 +1,4 @@
-{% if jekyll.environment == "offline" %}
+{% if jekyll.environment == "offline" or jekyll.environment == "debug" %}
     <script src="{{ site.baseurl }}/js/d3.v3.min.js" charset="utf-8"></script>
 {% else %}
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
