Remove style and script from score-footer markup
Add button onclick events as part of control script, for clean
markup--and if script is loaded asyncronously or functionality
changes.

--- a/_includes/score-footer.html
+++ b/_includes/score-footer.html
@@ -1,9 +1,9 @@
 {% if page.footer %}
 <div class="score-controls">
-    <button id="score-back" onclick="stepPointer(-1)" class="disabled">&lt;</button>
-    <button id="score-play" onclick="play()">&#9657;</button>
-    <button id="score-stop" onclick="stop()" class="disabled">&#9633;</button>
-    <button id="score-fwd" onclick="stepPointer(1)">&gt;</button>
+    <button id="score-back">&lt;</button>
+    <button id="score-play">&#9657;</button>
+    <button id="score-stop">&#9633;</button>
+    <button id="score-fwd">&gt;</button>
     <input id="score-pointer" type="number" value="0" /><!-- step="1" -->
 </div>
 {% endif %}
