--- a/projects/time-control/styles.scss
+++ b/projects/time-control/styles.scss
@@ -1,45 +1,28 @@
 ---
 ---
+$t-time: 1s;
+
 * {
 	font-family: Courier;
 }
 span {
 	display: inline-block;
 	padding: 0.5em;
-	border: 5px solid #fff;
+	margin: 6px;
+	border: 2px solid #eee;
 	border-radius: 20px;
-	background: #eee;
 	&.box {
 		border-radius: 0px;
-		transition: border-radius 5s;
+		transition: border-radius $t-time;
 	}
 }
 .active {
-	background: lime;
-	background-color: rgba(0, 255, 0, 0.25);
-	animation: active 5s;
+	border-color: rgba(0, 255, 0, 0.75);
+	transition: border-color $t-time;
 }
 .other {
-	background: lightblue;
-	background-color: rgba(0, 0, 255, 0.25);
-	animation: other 5s;
-}
-.stopped {
-	background: red;
-	background-color: rgba(255, 0, 0, 0.25);
-	animation: stop 5s;
-}
-@keyframes active {
-    0%   {background-color: rgba(0,255,0,0.75);}
-    100% {background-color: rgba(0,255,0,0.25);}
-}
-@keyframes other {
-    0%   {background-color: rgba(0,0,255,0.75);}
-    100% {background-color: rgba(0,0,255,0.25);}
-}
-@keyframes stop {
-    0%   {background-color: rgba(255,0,0,0.75);}
-    100% {background-color: rgba(255,0,0,0.25);}
+	border-color: rgba(0, 0, 255, 0.75);
+	transition: border-color $t-time;
 }
 
 {% include_relative _footer.scss %} // @import looks for files _sass/
