--- a/projects/time-control/_footer.scss
+++ b/projects/time-control/_footer.scss
@@ -1,29 +1,32 @@
+footer {
+	border-top: 2px solid #eee;
+}
 button, input {
+	margin: 0;
+	padding: 0;
+	border: 0;
 	width: 3em;
-	padding: 20px;
-	border: 5px solid #fff;
+	height: 3em;
+	font-size: 1.5em;
+	background: transparent;
+	&:hover {
+		outline: 2px solid #eee;
+	}
+	&:active, &:focus {
+		outline: 2px solid #ddd;
+	}
 }
 button {
-	font-size: 2em;
-	line-height: 1.25em;
-	border-radius: 20px;
-	background: #eee;
-	transition: background 0.3s, color 0.3s;
-	color: #ddd; // start as .disabled
-	&.disabled {
-		color: #ddd;
-	}
+	color: #ddd; // .disabled
 	&.enabled {
 		color: #000;
 	}
 }
 input {
-	height: 2.5em;
-	font-size: 2em;
 	text-align: center;
 }
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
