Add initial header/footer layout and styles

--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -10,6 +10,9 @@ layout: compress-lines
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        {% include score-header.html %}
+    </header>
     <main>
         <svg class="main"></svg>
         {{ content }}
