--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -1,30 +1,30 @@
-footer {
-	border-top: 2px solid #eee;
-}
 button, input {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	width: 3em;
 	height: 3em;
-	font-size: 1.5em;
+	font-size: 1em;
 	background: transparent;
 	&:hover {
-		outline: 2px solid #eee;
+		outline: 2px solid $layout-color-light;
 	}
 	&:active, &:focus {
 		outline: 2px solid #ddd;
 	}
 }
+
 button {
 	color: #ddd; // .disabled
 	&.enabled {
 		color: #000;
 	}
 }
+
 input {
 	text-align: center;
 }
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
