--- a/_includes/score-header.html
+++ b/_includes/score-header.html
@@ -1,2 +1,4 @@
 <h1>{{ page.title }}</h1>
-<a href="#info"><div id="score-info">i</div></a>
+<a href="#info">
+    <div id="score-info">i</div>
+</a>
