Hide .modal-trigger links, for now

--- a/css/score.scss
+++ b/css/score.scss
@@ -11,3 +11,5 @@ $score-info-trans-time: 0.3s;
 
 @import "score/layout";
 @import "score/main";
+
+.modal-trig { display: none; } // hide until ready
