--- a/_includes/score-footer.html
+++ b/_includes/score-footer.html
@@ -5,7 +5,7 @@
  --><button id="score-stop">&#9633;</button><!--
  --><button id="score-fwd">&gt;</button><!--
  --><input id="score-pointer" type="number" value="0" /><!-- step="1" -->
-    <a href="#settings">
+    <a href="#settings" class="modal-trig">
         <div id="score-settings">+</div>
     </a>
 </footer>
