--- a/_includes/score-header.html
+++ b/_includes/score-header.html
@@ -1,6 +1,6 @@
 <header>
 <h1>{{ page.title }}</h1>
-<a href="#info">
+<a href="#info" class="modal-trig">
     <div id="score-info">i</div>
 </a>
 </header>
