Add basic mobile adjustments
On the mobile footer, the max-width of the buttons is 20%.
Replace the input/scorePointer with the settings button. The
pointer can be manually set from there.

--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -58,7 +58,12 @@ h1, #score-info {
 h1 {
     font-size: $unit * 2;
     line-height: $unit * 2;
+    white-space: nowrap;
     overflow-x: scroll;
+    max-width: 85%;
+    @media (max-width: 599px) {
+        font-size: $unit;
+    }
 }
 
 #score-info {
