--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -2,8 +2,9 @@ button, input {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	width: $footer-height; // $unit * 2;
-	height: $footer-height; // $unit * 2;
+	width: $footer-height;
+	max-width: 20%; // for mobile--move input to settings modal
+	height: $footer-height;
 	display: inline-block;
 	box-sizing: border-box;
 
