Add basic modal layout and functionality

--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -16,6 +16,7 @@ layout: compress-lines
         {{ content }}
     </main>
     {% include score-footer.html %}
+    {% include score-modal.html %}
     {% include script-d3.html %}
     {% include script-vs.html %}
     <script src="script.js" charset="utf-8"></script>
