Comment out settings modal button until ready

--- a/_includes/score-footer.html
+++ b/_includes/score-footer.html
@@ -5,12 +5,8 @@
  --><button id="score-stop">&#9633;</button><!--
  --><button id="score-fwd">&gt;</button><!--
  --><input id="score-pointer" type="number" value="0" /><!-- step="1" -->
-    <a href="#settings" class="modal-trig">
+    {% comment %}<a href="#settings" class="modal-trig">
         <div id="score-settings">+</div>
-    </a>
+    </a>{% endcomment %}
 </footer>
 {% endif %}
-{% comment %}<!--
-PC options (PCs/note names/transpose)
-save/print
--->{% endcomment %}
