Add Inconsolata to score styles
While this adds another HTTP request, I'd like to keep a clean look
and to be consistent with the site style. More work can be done for
the site and score pages to look consistent.

--- a/_includes/score-modal.html
+++ b/_includes/score-modal.html
@@ -1,7 +1,7 @@
 <div id="score-info-modal" class="modal-overlay">
     <div class="modal-content">
         <span class="close">×</span>
-        <p><strong>{{ page.title }}</strong></p>
+        <h2>{{ page.title }}</h2>
         <p>{{ page.composer }} ({{ page.publish_date}})</p>
         <div>
             {{ page.info }}
