--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -6,6 +6,7 @@ layout: compress-lines
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel="stylesheet" href="{{ "/css/score.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="styles.css">
 </head>
