--- a/_includes/score-header.html
+++ b/_includes/score-header.html
@@ -1,6 +1,8 @@
 <header>
 <h1>{{ page.title }}</h1>
+{% if show_modal_info %}
 <a href="#info" class="modal-trig">
     <div id="score-info">i</div>
 </a>
+{% endif %}
 </header>
