--- a/_includes/score-modal.html
+++ b/_includes/score-modal.html
@@ -1,3 +1,4 @@
+{% if show_modal_info %}
 <div id="score-info-modal" class="modal-overlay">
     <div class="modal-content">
         <span class="close">×</span>
@@ -13,3 +14,4 @@
     </div>
 </div>
 <script src="../../js/modal.js" charset="utf-8"></script>
+{% endif %}
