Hide header/footer when playing timing-controls

--- a/_includes/score/footer.html
+++ b/_includes/score/footer.html
@@ -1,5 +1,5 @@
 {% if page.footer %}
-<footer>
+<footer id="score-footer">
     <button id="score-back">&lt;</button><!--
  --><button id="score-play">&#9657;</button><!--
  --><button id="score-stop">&#9633;</button><!--
