--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,4 +1,4 @@
-<header class="score-header">
+<header id="score-header">
 <h1>{{ page.title }}</h1>
 {% if show_modal_info %}
 <a href="#info" class="modal-trig">
