Pause score playback and show header/footer on modal window open

--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -30,6 +30,9 @@ header, footer {
     &.hide {
         opacity: 0;
     }
+    &.show { // actively keep on
+        opacity: 1;
+    }
     &:hover {
         opacity: 1;
     }
