--- a/_includes/score/modal.html
+++ b/_includes/score/modal.html
@@ -1,7 +1,7 @@
 {% if show_modal_info %}
 <div id="score-info-modal" class="modal-overlay">
     <div class="modal-content">
-        <span class="close">×</span>
+        <span id="score-info-modal-close" class="modal-close">×</span>
         <h2>{{ page.title }}</h2>
         <p>
             {{ page.composer }}
