Remove score-info anchor to maintain back button navigation
Closes issue #22, ready for publishing of basic header/info modal

--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,8 +1,8 @@
 <header id="score-header">
 <h1>{{ page.title }}</h1>
 {% if show_modal_info %}
-<a href="#info" class="modal-trig">
+<span class="modal-trig">
     <div id="score-info">i</div>
-</a>
+</span>
 {% endif %}
 </header>
