--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -23,6 +23,8 @@ header, footer {
     box-sizing: border-box;
 
     font-family: $layout-font-stack;
+    -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none; -o-user-select:none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 
     background-color: $layout-color-bg;
     transition: $layout-trans-time opacity;
@@ -33,7 +35,7 @@ header, footer {
     &.show { // actively keep on
         opacity: 1;
     }
-    &:hover {
+    &:hover, &:active {
         opacity: 1;
     }
 }
