--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -12,6 +12,8 @@ body {
 
 main {
     margin: $footer-height 0;
+    @include preventTapHighlight();
+    @include preventUserSelect();
 }
 
 header, footer {
@@ -23,8 +25,8 @@ header, footer {
     box-sizing: border-box;
 
     font-family: $layout-font-stack;
-    -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none; -o-user-select:none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    @include preventTapHighlight();
+    @include preventUserSelect();
 
     background-color: $layout-color-bg;
     transition: $layout-trans-time opacity;
