--- a/_sass/score/_main.scss
+++ b/_sass/score/_main.scss
@@ -7,10 +7,8 @@ body {
 svg.main {
     display: block;
     margin: 0 auto;
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* prevent iOS flash on tap */
-    -webkit-user-select: none; /* Chrome, Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE 10+ */
+    @include preventTapHighlight();
+    @include preventUserSelect();
     &.debug {
         border: 1px solid red;
     }
