--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -25,6 +25,7 @@ header, footer {
     box-sizing: border-box;
 
     font-family: $layout-font-stack;
+    cursor: default;
     @include preventTapHighlight();
     @include preventUserSelect();
 
