Set score-info button pointer to indicate clickable

--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -83,7 +83,7 @@ h1 {
     padding: $unit * 0.5;
     border: 2px solid $score-info-color;
     border-radius: 100%;
-
+    cursor: pointer;
     font-size: $unit;
     line-height: $unit;
     text-align: center;
