Create vectorscores.js and add intial partials to include

--- a/_includes/score/scripts.html
+++ b/_includes/score/scripts.html
@@ -3,6 +3,5 @@
 {% else %}
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 {% endif %}
-{% if page.vsjs %}
-    <script src="{{ site.baseurl }}/js/vs.js" charset="utf-8"></script>
-{% endif %}
+
+<script src="{{ site.baseurl }}/js/vectorscores.js" charset="utf-8"></script>
