--- a/projects/globject/styles.css
+++ b/projects/globject/styles.css
@@ -4,6 +4,16 @@ text {
     fill: black;
 }
 
+path.globject {
+    stroke: black;
+    stroke-width: 1;
+    fill: none;
+}
+
+.debug g {
+    outline: 1px dotted red;
+}
+
 /*debug*/
 rect, circle {
     stroke: pink;
