Allow keyboard control for scores
Left and right arrows: step score pointer
Spacebar: play/pause
Escape: stop (and reset score)
/: set focus to pointer field--commented out, readonly for now

--- a/_includes/score/footer.html
+++ b/_includes/score/footer.html
@@ -4,7 +4,7 @@
  --><button id="score-play">&#9657;</button><!--
  --><button id="score-stop">&#9633;</button><!--
  --><button id="score-fwd">&gt;</button><!--
- --><input id="score-pointer" type="number" value="0" pattern="\d*"/><!-- step="1" -->
+ --><input id="score-pointer" type="number" value="0" pattern="\d*" readonly="true"/><!-- step="1" -->
     {% comment %}<a href="#settings" class="modal-trig">
         <div id="score-settings">+</div>
     </a>{% endcomment %}
