--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -20,9 +20,9 @@ button, input {
 }
 
 button {
-	color: #ddd; // .disabled
-	&.enabled {
-		color: #000;
+	color: #000;
+	&:disabled {
+		color: #ddd;
 	}
 }
 
