--- a/projects/globject/styles.scss
+++ b/projects/globject/styles.scss
@@ -1,3 +1,5 @@
+---
+---
 text {
     font-family: 'Monaco', Courier, sans-serif;
     font-size: 12px;
@@ -5,7 +7,7 @@ text {
 }
 
 path.globject {
-    stroke: black;
+    stroke: #888;
     stroke-width: 1;
     fill: none;
 }
@@ -15,7 +17,7 @@ path.globject {
 }
 
 /*debug*/
-rect, circle {
+.debug rect, .debug circle {
     stroke: pink;
     fill-opacity: 0;
 }
