--- a/projects/globject/styles.scss
+++ b/projects/globject/styles.scss
@@ -1,5 +1,10 @@
 ---
 ---
+@font-face {
+    font-family: Bravura;
+    src: url(../../fonts/Bravura.woff);
+}
+
 text {
     font-family: 'Monaco', Courier, sans-serif;
     font-size: 12px;
@@ -10,6 +15,10 @@ path.globject {
     stroke: #888;
     stroke-width: 1;
     fill: none;
+}
+.globstuff text {
+    font-family: Bravura;
+    font-size: 24px;
 }
 
 .debug g {
