Add more functional JS compression layout, Liquid-only
compress-js will remove whitespace and comments for
now. Additional compression could be achieved but
processing single lines is relatively safe at this time.

Test scripts:
vectorscores.js: 9.1KB --> 6.2KB
glob/script.js: 4.6KB --> 3.3KB

--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -1,5 +1,5 @@
 ---
-layout: compress-lines
+layout: compress
 ---
 {% if page.info %}{% assign show_modal_info = true %}{% endif %}
 <!DOCTYPE html>
