Add show/hideLayout functions
Use scripts to auto hide and show both header and footer on hover,
click, and play/pause/stop states.

--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -35,10 +35,10 @@ header, footer {
     &.hide {
         opacity: 0;
     }
-    &.show { // actively keep on
+    &.show {
         opacity: 1;
     }
-    &:hover, &:active {
+    &:hover, &:active { // still needed? script handles hover for header/footer
         opacity: 1;
     }
 }
