Add duration symbol dictionary
- the symbols look hand drawn but are consistent--look for an
  alternative set of noteheads/flags
- flags are not aligned, sit too low compared to noteheads
- keeping the rectangle placeholder code for duration--could be
  an interesting setting to toggle later on

--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -9,8 +9,13 @@ main, svg {
     overflow-x: hidden;
 }
 
-.pitch-range {
+.pitch-range,
+.durations {
     font-family: 'Bravura';
+}
+
+.durations {
+    font-size: 21px;
 }
 
 .timbre {
