Add projects/ page

--- a/_includes/score/modal.html
+++ b/_includes/score/modal.html
@@ -11,6 +11,9 @@
             {{ page.info }}
         </div>
         <!--<a href="#">Play tutorial</a>-->
+        <p style="margin-top: 2em">
+            <a href="{{ site.baseurl }}/projects">Browse projects</a>
+        </p>
     </div>
 </div>
 {% endif %}
