--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <div class="trigger">
         {% for pg in site.pages %}
           {% if pg.menu %}
-          <a class="page-link" href="{{ pg.url | prepend: site.baseurl }}">{{ pg.title }}</a>
+          <a class="page-link {% if pg.url == page.url %}active{% endif %}" href="{{ pg.url | prepend: site.baseurl }}">{{ pg.title }}</a>
           {% endif %}
         {% endfor %}
       </div>
