--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,12 +17,12 @@
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
-            {% include icons-logos/github.html username=site.github_username %}
+            {% include icons-logos/footer-icon.html url="https://github.com" username=site.github_username icon="github.svg" %}
           </li>
           {% endif %}
           {% if site.twitter_username %}
           <li>
-            {% include icons-logos/twitter.html username=site.twitter_username %}
+            {% include icons-logos/footer-icon.html url="https://twitter.com" username=site.twitter_username icon="twitter.svg" %}
           </li>
           {% endif %}
           {% if site.website %}
