--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -194,7 +194,7 @@ pre {
 .icon {
 
     > svg {
-        padding-right: 4px; //
+        padding-right: 0.5em; //
         display: inline-block;
         width: 16px;
         height: 16px;
@@ -202,6 +202,14 @@ pre {
 
         path {
             fill: $grey-color;
+        }
+    }
+}
+
+a:hover {
+    svg {
+        path {
+            fill: $grey-color-dark;
         }
     }
 }
