--- a/projects/storyboard/styles.css
+++ b/projects/storyboard/styles.css
@@ -3,7 +3,7 @@
   stroke: #888;
   stroke-width: 1px;
   /*shape-rendering: geometricPrecision;*/
-  shape-rendering: crispEdges;
+  /*shape-rendering: crispEdges;*/
 }
 
 .main text {
