Comment out old svg styles in glob
Non-specific selectors caused unwanted styling of control icons

--- a/projects/glob/styles.css
+++ b/projects/glob/styles.css
@@ -9,15 +9,15 @@
 }
 
 /*debug*/
-rect, circle {
+/*rect, circle {
     stroke: pink;
     fill-opacity: 0;
-}
+}*/
 
-path {
+/*path {
     fill: #111;
     stroke: #111;
-}
+}*/
 
 text.glob-child {
     font-family: Bravura;
