--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -1,65 +1,66 @@
-button, input {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	width: $footer-height;
-	max-width: 20%; // for mobile--move input to settings modal
-	height: $footer-height;
-	display: inline-block;
-	box-sizing: border-box;
+#score-footer {
+    button, input {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        width: $footer-height;
+        max-width: 20%; // for mobile--move input to settings modal
+        height: $footer-height;
+        display: inline-block;
+        box-sizing: border-box;
 
-	font-size: $unit;
-	background: transparent;
+        font-size: $unit;
+        background: transparent;
 
-	&:hover {
-		outline: 2px solid $layout-color-light;
-	}
-	&:active, &:focus {
-		outline: 2px solid #ddd;
-	}
-}
-
-button {
-	&:disabled {
-        g {
-            stroke: #ddd;
+        &:hover {
+            outline: 2px solid $layout-color-light;
         }
-	}
-	svg {
-		width: 16px;
-		height: 16px;
-        g {
-            stroke: #000;
-            stroke-width: 8;
-            fill: none;
-            &.hide { // for play/pause
-                display: none;
+        &:active, &:focus {
+            outline: 2px solid #ddd;
+        }
+    }
+
+    button {
+        &:disabled {
+            g {
+                stroke: #ddd;
             }
         }
-	}
+        svg {
+            width: 16px;
+            height: 16px;
+            g {
+                stroke: #000;
+                stroke-width: 8;
+                fill: none;
+                &.hide { // for play/pause
+                    display: none;
+                }
+            }
+        }
+    }
 }
-
 input {
-	text-align: center;
+    text-align: center;
 }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 #score-settings {
-	float: right;
-	margin: 0;
-	padding: $unit;
-	border: 0;
-	width: $footer-height; // $unit * 2;
-	height: $footer-height; // $unit * 2;
-	display: inline-block;
-	box-sizing: border-box;
+    float: right;
+    margin: 0;
+    padding: $unit;
+    border: 0;
+    width: $footer-height; // $unit * 2;
+    height: $footer-height; // $unit * 2;
+    display: inline-block;
+    box-sizing: border-box;
 
-	font-size: $unit;
+    font-size: $unit;
     line-height: $unit;
     text-align: center;
     color: $score-info-color;
