--- a/projects/storyboard/styles.scss
+++ b/projects/storyboard/styles.scss
@@ -1,3 +1,5 @@
+---
+---
 @font-face {
     font-family: Bravura;
     src: url(../../fonts/Bravura.woff);
@@ -23,4 +25,21 @@
 .card text.dynamics {
   font-size: 24px;
   font-family: Bravura;
+}
+
+.indicator {
+    opacity: 0;
+    // transition: opacity 0.6s;
+    stroke: black;
+    stroke-width: 1;
+
+    fill: none; //black;
+    // fill-opacity: 0;
+
+    &.ready {
+        // opacity: 1;
+    }
+    // &.active {
+    //     fill: black;
+    // }
 }
