Display time in seconds above bar, not px position

--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -28,6 +28,10 @@ main, svg.main {
         stroke: black;
         stroke-opacity: 0.25;
     }
+    text {
+        font-family: serif;
+        font-style: italic;
+    }
 }
 
 .pitch-range,
