Set rehearsal letter to roman, not italic

--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -30,7 +30,9 @@ main, svg.main {
     }
     text {
         font-family: serif;
-        font-style: italic;
+        &.duration {
+            font-style: italic;
+        }
     }
 }
 
