--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -34,6 +34,10 @@ main, svg.main {
             font-style: italic;
         }
     }
+    rect {
+        fill: none;
+        stroke: black;
+    }
 }
 
 .pitch-range,
