--- a/_sass/score/_modal.scss
+++ b/_sass/score/_modal.scss
@@ -13,6 +13,7 @@
 }
 
 .modal-content {
+    display: none;
     background: #ffffff;
     font-family: $layout-font-stack;
     font-weight: normal;
