--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,8 +1,8 @@
 <header id="score-header">
 <h1>{{ page.title }}</h1>
-{% if show_modal_info %}
+{% if page.info %}
 <span class="modal-trig">
-    <div id="score-info">i</div>
+    <div id="score-info-open">i</div>
 </span>
 {% endif %}
 </header>
