--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -50,7 +50,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-#score-settings {
+#score-settings-open {
     float: right;
     margin: 0;
     padding: $unit;
