Add borders to new trashfire bins

--- a/projects/trashfire/styles.scss
+++ b/projects/trashfire/styles.scss
@@ -13,3 +13,11 @@
         fill: white;
     }
 }
+
+.bin {
+    rect {
+        fill: none;
+        stroke: grey;
+        stroke-opacity: 0.5;
+    }
+}
