Add glossary of "any ensemble" terms for ad;sr

--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,6 +1,6 @@
 <header id="score-header">
 <h1>{{ page.title }}</h1>
-{% if page.info %}
+{% if page.info or page.info_file %}
 <span class="modal-trig">
     <div id="score-info-open">i</div>
 </span>
