--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,8 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting"
+    "base",
+    "layout",
+    "description-list",
+    "syntax-highlighting"
 ;
