Add dedication to frontmatter, info modal

--- a/_includes/score/modals.html
+++ b/_includes/score/modals.html
@@ -9,6 +9,9 @@
             {{ page.composer }}
             {% if page.publish_date %}({{ page.publish_date}}){% endif %}
         </p>
+        <p>
+            {{ page.dedication }}
+        </p>
         {% if page.info %}
         <div>
             {{ page.info }}
