Update performance notes with Bravura symbols

--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -88,6 +88,7 @@ line[class^="debug-center"] {
     top: -4px;
     // display: inline-block;
     width: 1em;
+    font-style: normal;
 }
 
 .modal-content {
