Add .bartok for custom styles and to fix selection conflicts
Giving bartok/snap symbols the class 'dynamics' was causing
notes with bartok symbols to not display dynamics.

--- a/projects/adsr/styles.scss
+++ b/projects/adsr/styles.scss
@@ -44,8 +44,12 @@ main, svg.main {
 
 .pitch-range,
 .durations,
-.dynamics {
+.dynamics,
+.bartok {
     font-family: 'Bravura';
+}
+.bartok {
+    font-size: 21px;
 }
 
 .timbre,
